<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#026cb6"
    android:gravity="top|center_vertical"
    android:padding="20dp"
    tools:context=".RelatorioFragment"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textTitRelatorio"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:gravity="center"
        android:text="Relatório"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="527dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/borda"
        android:gravity="end"
        android:padding="10dp"
        android:stretchColumns="*">

        <TableRow>

            <TextView
                android:id="@+id/txtTabelaEscova"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CCCCCC"
                android:text="@string/escova"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtEntradaEscova"
                android:layout_width="10dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TOTAL ENTRADAS"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEntEscova"
                android:layout_width="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/corEntrada"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtSaidaEscova"
                android:layout_width="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TOTAL SAÍDAS"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSaiEscova"
                android:layout_width="83dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/corSaida"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtTabelaBateria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CCCCCC"
                android:text="@string/bateria"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtEntradaBateria"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TOTAL ENTRADAS"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEntBateria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/corEntrada"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtSaidaBateria"
                android:layout_width="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TOTAL SAÍDAS"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSaiBateria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/corSaida"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtTabelaRespirador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CCCCCC"
                android:text="@string/respirador"
                android:textAlignment="center"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtEntradaRespirador"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TOTAL ENTRADAS"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEntRespirador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/corEntrada"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtSaidaRespirador"
                android:layout_width="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TOTAL SAÍDAS"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSaiRespirador"
                android:layout_width="3dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/corSaida"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtTabelaFusivel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CCCCCC"
                android:text="@string/fusivel"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtEntradaFusivel"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TOTAL ENTRADAS"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEntFusivel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/corEntrada"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtSaidaFusivel"
                android:layout_width="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TOTAL SAÍDAS"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSaiFusivel"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/corSaida"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtTabelaLampada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#CCCCCC"
                android:text="@string/lampada"
                android:textAlignment="center"
                android:textStyle="bold" />

        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtEntradaLampada"
                android:layout_width="8dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TOTAL ENTRADAS"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtEntLampada"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/corEntrada"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow>

            <TextView
                android:id="@+id/txtSaidaLampada"
                android:layout_width="6dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="TOTAL SAÍDAS"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtSaiLampada"
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:textColor="@color/corSaida"
                android:textSize="17dp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</LinearLayout>